# Survive

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  font.json  imgui.ini  main.cpp
.github/workflows/: cmake.yml
assets/models/: character.dae
assets/scenes/: particles.survive  physics.survive  physics3D.survive  scene.survive
assets/scripts/: MoveObjectScript.cpp  ThirdCameraPersonScript.cpp
editor/components/: ComponentTemplate.h
editor/editor/: Editor.cpp  Editor.h  EditorEventHandler.cpp  EditorEventHandler.h  EntityManager.cpp  EntityManager.h  Log.cpp  Log.h  LogEditor.cpp  LogEditor.h  Menu.cpp  Menu.h  Scene.cpp  Scene.h  ScriptEditor.cpp  ScriptEditor.h  StatusBar.cpp  StatusBar.h
editor/fileChooser/: FileChooser.cpp  FileChooser.h
editor/util/: EditorUtil.cpp  EditorUtil.h
editor/window/: CameraWindow.cpp  CameraWindow.h  ContentBrowser.cpp  ContentBrowser.h  DirectoryTree.cpp  DirectoryTree.h  Inspector.cpp  Inspector.h  PropertyWindow.h  SkyboxWindow.cpp  SkyboxWindow.h
engine/animation/: AnimationRenderer.cpp  AnimationRenderer.h  AnimationShader.cpp  AnimationShader.h
engine/audio/: AudioMaster.cpp  AudioMaster.h  AudioSystem.cpp  AudioSystem.h  Source.cpp  Source.h
engine/camera/: Camera.cpp  Camera.h
engine/components/: AnimationComponent.h  BloomComponent.h  BoxCollider2DComponent.h  BoxCollider3DComponent.h  CapsuleCollider3DComponent.h  CharacterJoint3DComponent.h  CircleCollider2DComponent.h  Collider2DComponent.h  Collider3DComponent.h  ComponentType.h  ComponentUtil.h  Components.h  ConvexMeshCollider3DComponent.h  DistanceJoint2DComponent.h  EdgeCollider2DComponent.h  FixedJoint3DComponent.h  HingeJoint2DComponent.h  HingeJoint3DComponent.h  IdComponent.h  JointComponent.h  MaterialComponent.h  MoveComponent.h  OutlineComponent.h  ParticleComponent.h  PolygonCollider2DComponent.h  ReflectionComponent.h  RefractionComponent.h  Render2DComponent.h  Render3DComponent.h  RenderComponent.h  RigidBody2DComponent.h  RigidBody3DComponent.h  RigidBodyComponent.h  ScriptComponent.h  ShadowComponent.h  SkyboxComponent.h  SoundComponent.h  SphereCollider3DComponent.h  SphereColliderComponent.h  SpriteComponent.h  (+8 more)
engine/constant/: Constants.h  ShadowMapConstants.h
engine/display/: Display.cpp  Display.h
engine/entity/: Entity.cpp  Entity.h  Entity2D.cpp  Entity2D.h
engine/events/: EventHandler.cpp  EventHandler.h
engine/fbo/: FrameBuffer.cpp  FrameBuffer.h
engine/gaussianBlur/: BloomRenderer.cpp  BloomRenderer.h  BlurRenderer.cpp  BlurRenderer.h  HorizontalBlur.cpp  HorizontalBlur.h  VerticalBlur.cpp  VerticalBlur.h  VerticalBlurShader.h
engine/gui/: Gui.cpp  Gui.h  GuiRenderer.cpp  GuiRenderer.h  GuiShader.cpp  GuiShader.h
engine/light/: Light.cpp  Light.h
engine/math/: Maths.cpp  Maths.h  Quaternion.cpp  Quaternion.h
engine/mousePicking/: MousePicking.cpp  MousePicking.h  MousePickingShader.cpp  MousePickingShader.h
engine/objects/: Object3D.cpp  Object3D.h  ObjectRenderer.cpp  ObjectRenderer.h  ObjectShader.cpp  ObjectShader.h
engine/outline/: OutlineRenderer.cpp  OutlineRenderer.h  OutlineShader.cpp  OutlineShader.h
engine/parser/: DaeParser.cpp  DaeParser.h  ObjParser.cpp  ObjParser.h
engine/particles/: Particle.cpp  Particle.h  ParticleModel.cpp  (+9 more)
math/: Maths.h
res/: font.json  fontDistanceField.json  scene.survive
(+455 files in other folders)
